# hallucinator

./: .gitignore  CLAUDE.md  MANIFESTO.md  PLAN-release-binaries.md  README.md  app-rs.py  app.py  check_hallucinated_references.py  dblp_offline.py  requirements.txt
.githooks/: pre-commit
.github/workflows/: ci.yml  docs.yml  pages.yml  python-wheels.yml  release.yml
docs/: CNAME  tui-design.md
hallucinator-rs/: Cargo.toml  PYTHON_BINDINGS.md  README.md  pyproject.toml
hallucinator-rs/.cargo/: config.toml
hallucinator-rs/crates/hallucinator-acl/: Cargo.toml  LICENSE-MIT
hallucinator-rs/crates/hallucinator-acl/src/: builder.rs  db.rs  lib.rs  query.rs  sqlite_sink.rs  xml_parser.rs
hallucinator-rs/crates/hallucinator-arxiv-offline/: Cargo.toml
hallucinator-rs/crates/hallucinator-arxiv-offline/src/: db.rs  download.rs  harvest.rs  ingest.rs  lib.rs
hallucinator-rs/crates/hallucinator-bbl/: Cargo.toml
hallucinator-rs/crates/hallucinator-bbl/src/: lib.rs
hallucinator-rs/crates/hallucinator-cli/: Cargo.toml
hallucinator-rs/crates/hallucinator-cli/src/: main.rs  output.rs
hallucinator-rs/crates/hallucinator-common/: Cargo.toml
hallucinator-rs/crates/hallucinator-common/src/: fuzzy.rs  lib.rs
hallucinator-rs/crates/hallucinator-core/: Cargo.toml
hallucinator-rs/crates/hallucinator-core/src/: authors.rs  cache.rs  checker.rs  config_file.rs  doi.rs  lib.rs  matching.rs  orchestrator.rs  pool.rs  rate_limit.rs  retraction.rs  text_utils.rs
hallucinator-rs/crates/hallucinator-core/tests/: pool_integration.rs
hallucinator-rs/crates/hallucinator-dblp/: Cargo.toml
hallucinator-rs/crates/hallucinator-dblp/src/: builder.rs  db.rs  lib.rs  parser.rs  query.rs  sqlite_sink.rs  xml_parser.rs
hallucinator-rs/crates/hallucinator-dblp/tests/: problematic_papers.rs
hallucinator-rs/crates/hallucinator-grobid/: Cargo.toml
hallucinator-rs/crates/hallucinator-grobid/src/: lib.rs
hallucinator-rs/crates/hallucinator-iacr-eprint/: Cargo.toml
hallucinator-rs/crates/hallucinator-iacr-eprint/src/: builder.rs  db.rs  lib.rs
hallucinator-rs/crates/hallucinator-ingest/: Cargo.toml
hallucinator-rs/crates/hallucinator-ingest/src/: lib.rs
hallucinator-rs/crates/hallucinator-openalex/: Cargo.toml
hallucinator-rs/crates/hallucinator-openalex/src/: builder.rs  lib.rs  query.rs  s3.rs
hallucinator-rs/crates/hallucinator-parsing/: Cargo.toml
hallucinator-rs/crates/hallucinator-parsing/examples/: debug_f1_zero.rs  evaluate_extraction.rs  evaluate_per_ref.rs  (+3 more)
hallucinator-rs/crates/hallucinator-python/: Cargo.toml
hallucinator-rs/crates/hallucinator-scowl/: Cargo.toml
hallucinator-rs/crates/hallucinator-tui/: Cargo.toml
hallucinator-rs/crates/hallucinator-web/: Cargo.toml
hallucinator-rs/docker/searxng/: docker-compose.yml  settings.yml
hallucinator-rs/python/examples/: fts5_query_normalization.py  ieee_fps_regexps.py  neurips_fps_regexps.py  regexp_improvements.py  standalone_validator.py
hallucinator-rs/tests/: test_python_bindings.py  test_validation_bindings.py
site/: CNAME  index.html  install-cli.sh  install.sh
templates/: index.html
tests/unit/: test_cancellation.py
(+97 files in other folders)
