[package]
name = "hallucinator-arxiv-offline"
version.workspace = true
edition.workspace = true
license = "AGPL-3.0-or-later OR MIT"
description = "Offline arXiv metadata database builder and querier (Kaggle snapshot ingest)"

[package.metadata.dist]
dist = false

[dependencies]
rusqlite.workspace = true
reqwest.workspace = true
thiserror.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
flate2.workspace = true
zip.workspace = true
dirs.workspace = true

[dev-dependencies]
tempfile = { workspace = true }
