[package]
name = "hallucinator-grobid"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "GROBID TEI XML parser for hallucinated reference detection"

[package.metadata.dist]
dist = false

[dependencies]
hallucinator-core.workspace = true
quick-xml.workspace = true
thiserror.workspace = true
